--- a/src/CNAB.Infra.IoC/CNAB.Infra.IoC.csproj
+++ b/src/CNAB.Infra.IoC/CNAB.Infra.IoC.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.15" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
